--- a/as3/CMakeLists.txt
+++ b/as3/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.17)
 project(as3)
-set(CMAKE_EXE_LINKER_FLAGS -static)
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(as3 main.cpp)
+add_executable(as3 main.cpp LinkedList.h)
