--- a/as3/cuda/CMakeLists.txt
+++ b/as3/cuda/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.17)
 project(cuda CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
-set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
-add_executable(cuda main.cu GPU.h CodeError.h LinkedList.h ArrayList.h)
+
+add_executable(cuda main.cu GPU.h CodeError.h)
 
 set_target_properties(
         cuda
