--- a/project/source/CMakeLists.txt
+++ b/project/source/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(source)
+project(matrix)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_library(source library.cpp library.h matrix.h)
+add_library(matrix library.cpp library.h)
