--- a/project/test/CMakeLists.txt
+++ b/project/test/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 3.17)
 project(project)
 set(CMAKE_CXX_STANDARD 14)
 
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp  -O3")
+
 link_directories(lib)
+
 add_executable(project main.cpp)
 
 target_link_libraries(project libmatrix.a)
