--- a/as3/openblas/CMakeLists.txt
+++ b/as3/openblas/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(${INC_DIR})
 link_directories(${LINK})
 link_libraries(openblas)
-add_executable(openblass main.cpp cross_system.h CodeError.h main.h)
+add_executable(openblass test.cpp)
 target_link_libraries(openblass openblas)
