--- a/as4/source/CMakeLists.txt
+++ b/as4/source/CMakeLists.txt
@@ -1,5 +1,14 @@
 cmake_minimum_required(VERSION 3.17)
 project(matrix)
+IF (WIN32)
+	MESSAGE(STATUS "Your are using Windows")
+ELSEIF (APPLE)
+	MESSAGE(STATUS "Your are using MacOS ,this cmake can't be used in MacOS because clang will stop this project for using gcc")
+    message(FATAL_ERROR "Error: We don't suppose the MacOS, please use the terminal to compile this program")
+ELSEIF (UNIX)
+	MESSAGE(STATUS "Your are using Linux")
+ENDIF ()
+
 FIND_PACKAGE( OpenMP REQUIRED)
 if(OPENMP_FOUND)
     message("OPENMP FOUND")
