--- a/as4/source/CMakeLists.txt
+++ b/as4/source/CMakeLists.txt
@@ -1,5 +1,18 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.15)
 project(matrix)
+option(ARM_platform "if you use arm set it ON" OFF)
+IF(ARM_platform )
+	MESSAGE(STATUS "Your are using ARM, we will use the neon")
+	FIND_PACKAGE( OpenMP REQUIRED)
+	if(OPENMP_FOUND)
+	    message("OPENMP FOUND")
+	    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -O3")
+	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O3")
+	    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -O3")
+	endif()
+	set(CMAKE_CXX_STANDARD 14)
+	add_library(matrix ARM_library.cpp library.h)
+ELSE()
 IF (WIN32)
 	MESSAGE(STATUS "Your are using Windows")
 ELSEIF (APPLE)
@@ -8,7 +21,6 @@ ELSEIF (APPLE)
 ELSEIF (UNIX)
 	MESSAGE(STATUS "Your are using Linux")
 ENDIF ()
-
 FIND_PACKAGE( OpenMP REQUIRED)
 if(OPENMP_FOUND)
     message("OPENMP FOUND")
@@ -17,6 +29,5 @@ if(OPENMP_FOUND)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -mfma ")
 endif()
 set(CMAKE_CXX_STANDARD 14)
-
-
 add_library(matrix library.cpp library.h)
+ENDIF()
