--- a/as4/source/matrix.cbp
+++ b/as4/source/matrix.cbp
@@ -8,71 +8,85 @@
 		<Option virtualFolders="CMake Files\;"/>
 		<Build>
 			<Target title="all">
-				<Option working_dir="/Users/happys/Desktop/project/AI/C_project/as4/source"/>
+				<Option working_dir="G:/C_project/as4/source"/>
 				<Option type="4"/>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 all"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="rebuild_cache">
-				<Option working_dir="/Users/happys/Desktop/project/AI/C_project/as4/source"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-				</MakeCommands>
-			</Target>
-			<Target title="edit_cache">
-				<Option working_dir="/Users/happys/Desktop/project/AI/C_project/as4/source"/>
-				<Option type="4"/>
-				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 edit_cache"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 all"/>
+					<CompileFile command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="matrix">
-				<Option output="/Users/happys/Desktop/project/AI/C_project/as4/source/libmatrix.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/Users/happys/Desktop/project/AI/C_project/as4/source"/>
+				<Option output="G:/C_project/as4/source/libmatrix.a" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="G:/C_project/as4/source"/>
 				<Option object_output="./"/>
 				<Option type="2"/>
 				<Option compiler="gcc"/>
-				<Compiler/>
+				<Compiler>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++/mingw32"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++/backward"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/../../../../include"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include-fixed"/>
+				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 matrix"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 matrix"/>
+					<CompileFile command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 			<Target title="matrix/fast">
-				<Option output="/Users/happys/Desktop/project/AI/C_project/as4/source/libmatrix.a" prefix_auto="0" extension_auto="0"/>
-				<Option working_dir="/Users/happys/Desktop/project/AI/C_project/as4/source"/>
+				<Option output="G:/C_project/as4/source/libmatrix.a" prefix_auto="0" extension_auto="0"/>
+				<Option working_dir="G:/C_project/as4/source"/>
 				<Option object_output="./"/>
 				<Option type="2"/>
 				<Option compiler="gcc"/>
-				<Compiler/>
+				<Compiler>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++/mingw32"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include/c++/backward"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/../../../../include"/>
+					<Add directory="c:\mingw\bin\../lib/gcc/mingw32/9.2.0/include-fixed"/>
+				</Compiler>
 				<MakeCommands>
-					<Build command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 matrix/fast"/>
-					<CompileFile command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
-					<Clean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
-					<DistClean command="/usr/bin/make -f &quot;/Users/happys/Desktop/project/AI/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<Build command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 matrix/fast"/>
+					<CompileFile command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="edit_cache">
+				<Option working_dir="G:/C_project/as4/source"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 edit_cache"/>
+					<CompileFile command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+				</MakeCommands>
+			</Target>
+			<Target title="rebuild_cache">
+				<Option working_dir="G:/C_project/as4/source"/>
+				<Option type="4"/>
+				<MakeCommands>
+					<Build command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 rebuild_cache"/>
+					<CompileFile command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 &quot;$file&quot;"/>
+					<Clean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
+					<DistClean command="C:/MinGW/bin/mingw32-make.exe -f &quot;G:/C_project/as4/source/Makefile&quot;  VERBOSE=1 clean"/>
 				</MakeCommands>
 			</Target>
 		</Build>
-		<Unit filename="/Users/happys/Desktop/project/AI/C_project/as4/source/ARM_library.cpp">
+		<Unit filename="G:/C_project/as4/source/library.cpp">
 			<Option target="matrix"/>
 		</Unit>
-		<Unit filename="/Users/happys/Desktop/project/AI/C_project/as4/source/library.h">
+		<Unit filename="G:/C_project/as4/source/library.h">
 			<Option target="matrix"/>
 		</Unit>
-		<Unit filename="/Users/happys/Desktop/project/AI/C_project/as4/source/CMakeLists.txt">
+		<Unit filename="G:/C_project/as4/source/CMakeLists.txt">
 			<Option virtualFolder="CMake Files\"/>
 		</Unit>
 	</Project>
