--- a/as4/source/CMakeLists.txt
+++ b/as4/source/CMakeLists.txt
@@ -1,14 +1,14 @@
 cmake_minimum_required(VERSION 3.15)
 project(matrix)
 option(ARM_platform "if you use arm set it ON" OFF)
-IF(ARM_platform)
+IF(ARM_platform )
 	MESSAGE(STATUS "Your are using ARM, we will use the neon")
 	FIND_PACKAGE( OpenMP REQUIRED)
 	if(OPENMP_FOUND)
 	    message("OPENMP FOUND")
-	    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -O3")
-	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -O3")
-	    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -O3")
+	    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS} -ftree-vectorize -O3")
+	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -ftree-vectorize -O3")
+	    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS} -ftree-vectorize -O3")
 	endif()
 	set(CMAKE_CXX_STANDARD 14)
 	add_library(matrix ARM_library.cpp library.h)
