--- a/final_project/source/CMakeLists.txt
+++ b/final_project/source/CMakeLists.txt
@@ -18,10 +18,15 @@ endif()
 message(STATUS "Linking to the library...")
 set(GLEW_H ./OpenGL/glew/2.2.0/include/GL)
 set(GLFW_H ./OpenGL/glfw/3.3.2/include/GLFW)
-
+set(GLTOOLS_H ./OpenGL/GLTools)
+include_directories(${GLTOOLS_H} ${GLFW_H} ${GLEW_H})
 message(STATUS "Creating the Library...")
-add_library(OpenGUI Frame/OpenGUI_frame.h Frame/OpenGUI_frame.cpp Frame/OpenGUI_Button.cpp Frame/OpenGUI_Button.h Frame/OpenGUI_label.cpp Frame/OpenGUI_label.h Frame/OpenGUI_TextBox.cpp Frame/OpenGUI_TextBox.h Top/OpenGUI.cpp Top/OpenGUI.h Frame/Func.h)
+set(GLEW_LIB ./OpenGL/glew/2.2.0/lib/libGLEW.2.2.dylib)
+set(GLFW_LIB ./OpenGL/glfw/3.3.2/lib/libglfw.3.dylib)
+set(GLTOOLS_LIB ./OpenGL/GLTools/libgltools.dylib)
+link_libraries(${OPENGL} ${GLFW_LIB} ${GLTOOLS_LIB} ${GLEW_LIB})
+add_library(OpenGUI Header/OpenGUI_frame.h Frame/OpenGUI_frame.cpp Frame/OpenGUI_Button.cpp Header/OpenGUI_Button.h Frame/OpenGUI_label.cpp Header/OpenGUI_label.h Frame/OpenGUI_TextBox.cpp Header/OpenGUI_TextBox.h Header/Func.h Header/GUIroot.h)
 message(STATUS "Linking the OpenGL...")
-
-
+target_link_libraries(OpenGUI "-framework OpenGL")
+target_link_libraries(OpenGUI "-framework GLUT")
 message(STATUS "Enjoy your GUI trip")
